# arxiv-bucket

./: README.md  pyproject.toml
src/arxiv_bucket/arxiv/: bucket_handler.py  bulk_archive_handler.py  bulk_archive_registry.py  manifest.py  submission_handler.py  submission_registry.py
src/arxiv_bucket/aws/: s3_client.py
src/arxiv_bucket/file/: file_handler.py  file_name.py
src/arxiv_bucket/file/handler/: archive_handler.py  image_handler.py  pdf_handler.py  postscript_handler.py  tex_handler.py  xml_handler.py
src/arxiv_bucket/services/: hash_service.py  registry.py
tests/: test_version.py
tests/arxiv/: test_bucket_handler.py  test_bulk_archive_handler.py  test_bulk_archive_registry.py  test_manifest.py  test_submission_handler.py  test_submission_registry.py  test_submission_type.py
tests/aws/: test_s3_client.py
tests/file/: test_file_handler.py  test_file_name.py  test_file_system.py  test_file_type.py
tests/file/handler/: test_archive_handler.py  test_image_handler.py  test_pdf_handler.py  test_postscript_handler.py  test_tex_handler.py  test_xml_handler.py
tests/services/: test_hash_service.py  test_registry.py  test_time_service.py
