[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-bucket"
version = "0.1.0"
description = "Python tool for accessing, validating, and processing arXiv bulk data from AWS S3"
authors = [{name = "Jason Stuber"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow",
    "xmltodict",
    "matplotlib",
    ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
